--- a/label/Dockerfile
+++ b/label/Dockerfile
@@ -1,5 +1,8 @@
 FROM alpine:3
 
+LABEL author="Tony Afriza"
+LABEL company="rizaton"
+
 RUN mkdir hello
 RUN echo "Hello World!" > "hello/world.txt"
 
