environtment variable instruction

--- a/env/Dockerfile
+++ b/env/Dockerfile
@@ -1,8 +1,9 @@
 FROM golang:alpine3.23
+ENV APP_PORT=8080
 
 RUN mkdir app
 COPY main.go app
 
-EXPOSE 8080
+EXPOSE ${APP_PORT}
 
 CMD ["go", "run", "app/main.go"]
